chore: update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,12 @@
 out/
 
 # ================================================================================================ #
+# Development Utilities
+
+# Caching
+.cache/
+
+# ================================================================================================ #
 # Compilation and Building
 
 # Compiled Object Files
