build: changed minimum cmake version to 3.28
Added .idea and cmake debug to the git ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 
 # Directories
 out/
+.idea/
+cmake-build-debug/
 
 # ================================================================================================ #
 # Development Utilities
